--- a/src/styles-dir/_grid.scss
+++ b/src/styles-dir/_grid.scss
@@ -15,7 +15,7 @@
 .result-instance {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 0px 10px 15px 10px;
   box-shadow: 0 0 5px 3px rgba(218, 216, 216, 0.5);
   border-radius: 5px;
   height: auto;
@@ -36,6 +36,7 @@
 }
 
 .content-container-4 {
+  direction: rtl;
   display: flex;
   flex-direction: row;
   width: auto;
@@ -61,24 +62,23 @@
   flex-direction: row;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
+  direction: rtl;
 }
 
 .other-book-item {
   display: flex;
   flex-direction: column;
   border-radius: 6px;
-  border: 1px rgb(240, 240, 240) solid;
+  border: 1px rgb(223, 223, 223) solid;
   min-width: 150px;
   margin: 20px 0px 20px 10px;
   overflow: hidden;
 }
 
 .other-book-name {
-  flex-wrap: wrap;
   font-weight: bold;
   text-align: right;
   margin: 6px 10px 5px 5px;
-  text-overflow: clip;
 }
 .other-book-writer {
   text-align: right;
@@ -97,8 +97,53 @@
 .link1 {
   margin-right: 40px;
 }
-#bookDescription {
+.bookDescription {
   margin-top: 20px;
   margin-bottom: 20px;
   align-content: right;
+  text-align: right;
+  text-justify: auto;
+  text-align-last: right;
+}
+
+.description {
+  margin-bottom: 10px;
+  align-content: right;
+  text-align: right;
+  text-justify: newspaper;
+  text-align-last: right;
+}
+
+.book-image {
+  overflow: hidden;
+  border-radius: 6px;
+  border: none;
+  height: 80px;
+  width: 80px;
+}
+
+// Writer Search Exclusive Styles
+
+.book-instance-container {
+  border-radius: 6px;
+  border: 1px rgb(221, 220, 220) solid;
+  padding: 8px;
+}
+
+.text-overflow-3dots {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 300px;
+  text-align: right;
+  direction: rtl;
+}
+
+.text-overflow-3dots-130 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 130px;
+  text-align: right;
+  direction: rtl;
 }
