--- a/src/styles-dir/components/_search-input.scss
+++ b/src/styles-dir/components/_search-input.scss
@@ -25,6 +25,8 @@
   padding-right: 30px;
   text-align: right;
   box-shadow: 0 6px 3px -2px rgb(245, 245, 245);
+  margin-bottom: 10px;
+  direction: rtl;
 }
 
 .input-search {
